<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89CFF0"
    android:orientation="vertical"
    tools:context=".fragments.update.updateFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="#0a2351"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#BFE9EF"
                app:cardCornerRadius="6dp">

                <TextView
                    android:id="@+id/mood_asker_edit"
                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:layout_margin="0dp"
                    android:fontFamily="@font/amaranth_bold"
                    android:padding="10dp"
                    android:text="@string/how_are_you_feeling"
                    android:textAlignment="center"
                    android:textColor="#17192B"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/happy_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_happy"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/relieved_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_relieved"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/tododdd" />

                <ImageView
                    android:id="@+id/angry_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_angry"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/tododd" />

                <ImageView
                    android:id="@+id/cry_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_cry"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/toTodoo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="#1a1f71"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pour_thoughts_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/pour_your_thoughts"
                android:textAlignment="center"
                android:textColor="#A5C7E3"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/entry_edit"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="158dp"
                android:layout_margin="10dp"
                android:background="#6A8E93"
                android:ems="10"
                android:fontFamily="@font/andika"
                android:gravity="start|top|left"
                android:hint="@string/type_it_all"
                android:importantForAutofill="no"
                android:padding="5dp"
                android:singleLine="false"
                android:textAlignment="viewStart"
                android:textColor="#0C1037"
                android:textSize="20sp"
                android:scrollbars="vertical"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit_edit"
                    android:layout_width="248dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/balooi"
                    android:padding="2dp"
                    android:text="@string/update_your_feelings"
                    android:textColor="#090C27"
                    app:backgroundTint="#81D8D0"
                    app:iconPadding="8dp"
                    tools:ignore="TextContrastCheck" />

                <ImageButton
                    android:id="@+id/delete_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1a1f71"
                    android:contentDescription="@string/tododddd"
                    android:src="@drawable/ic_delete"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>